[project]
name = "ErisPulse-SeTu"
version = "1.2.2"
description = "简单的色图获取模块"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [ { name = "ShanFish", email = "zcsfish@qq.com" } ]
dependencies = [
    "aiohttp"
]

[project.urls]
"homepage" = "https://github.com/shanfishapp/ErisPulse-GetSeTu"

[project.entry-points]
"erispulse.module" = { "SeTu" = "SeTu:Main" }

[tool.flit.module]
name = "SeTu"
